# VelaCL

./: .gitignore  DATA_CARD.md  Dockerfile  MODEL_CARD.md  Makefile  README.md  REPRODUCIBILITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/: __init__.py
apps/api/: main.py
apps/dashboard/: next.config.ts  package-lock.json  package.json  tsconfig.json
configs/: base.yaml
data/ingestion/: README.md
data/streaming/: events.jsonl
data/validation/: README.md  schema.json
docs/: 404.html  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  _not-found.html  _not-found.txt  experiments.json  index.html  index.txt
docs/_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt
evaluation/continual_learning/: README.md
evaluation/performance/: README.md
evaluation/quality/: README.md
evaluation/safety/: README.md
experiments/: README.md  registry.json
experiments/runs/: summary.json
infrastructure/: ci.yml.example  prometheus.yml
models/active_learning/: README.md
models/baselines/: README.md
models/continual/: README.md
models/distillation/: README.md
reports/: DEMO_SCRIPT.md  TECHNICAL_REPORT.md
scripts/: benchmark_api.py
serving/: README.md
tests/: test_api.py  test_checkpoint.py  test_data.py  test_metrics.py  test_model.py
velacl/: __init__.py  config.py  data.py  evaluate.py  experiment.py  metrics.py  model.py  replay.py  tracking.py  trainer.py  utils.py
(+23 files in other folders)
